--- a/src/App.scss
+++ b/src/App.scss
@@ -16,11 +16,14 @@ body{
     margin: 60px auto;
     background-color: rgb(0, 0, 0);
     border-radius: 11px;
-    max-width: 300px;
+    max-width: 320px;
     button{ 
         margin-left: 30%;
+        padding: 10px;
+        width: 120px;
     }
 }
+
 
 @media(max-width:500px){
 .generate__wrapper {
